# scnt-exs

./: CMakeLists.txt  CmakeLists.txt  Config.cmake.in  LICENSE  README.md  run.sh  settings.env  setup.sh
cmake/: scnt-exs-config.cmake.in
examples/ArraySolver/: atom.cpp  main.cpp  main.h  operator_array.cpp
examples/CustomSolver/: atom.cpp  main.cpp  main.h  operator_length.cpp
examples/DefaultSolver/: main.cpp
examples/ModifiedSolver/: main.cpp
examples/SettingsSolver/: atom.cpp  main.cpp  main.h  operator_select.cpp
examples/UniquePtrSolver/: atom.cpp  main.cpp  main.h
gtest/: examples_test.cpp  expression_test.cpp  operators_test.cpp  solver_test.cpp
src/: AtomBaseClass.h  ExpressionClass.cpp  atom.h  atom_list.cpp  atom_list.h  expression.cpp  expression.h  exs.h  helpers.cpp  helpers.h  main.cpp  main.h  operator_list.cpp  operator_list.h  operators.cpp  operators.h  settings.h  solver.cpp  solver.h  step_list.h  token.cpp  token.h  token_list.cpp  token_list.h
src/arguments/: cosinus.h  exponent.h  logarithm.h  logarithm_10.h  logarithm_base.h  parentheses.h  power_base.h  sinus.h  square_root.h  tangens.h
src/branching/: condition.h  parentheses.h
src/comparison/: equal.h  greater.h  greater_equal.h  lower.h  lower_equal.h  not_equal.h
src/group/: cosinus.h  exponent.h  logarithm.h  logarithm_10.h  logarithm_base.h  power_base.h  sinus.h  square_root.h  tangens.h
src/logical/: and.h  not.h  or.h
src/math/: add.h  cosinus.h  divide.h  exponent.h  logarithm.h  logarithm_10.h  logarithm_base.h  modulo.h  multiply.h  power.h  power_base.h  sinus.h  square_root.h  subtract.h  tangens.h
src/operators/: add.cpp  add.h  divide.cpp  divide.h  equal.h  greater.h  greater_equal.h  lower.h  lower_equal.h  multiply.cpp  multiply.h  not_equal.h  power.cpp  power.h  subtract.cpp  subtract.h
tests/: examples_test.cpp  expression_test.cpp  operators_test.cpp  solver_test.cpp  tokens_test.cpp
